apps/debug/whoami/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: debug
spec:
  replicas: 1
  selector:
    matchLabels: {}
  strategy:
    type: Recreate
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: whoami
          image: containous/whoami:v1.4.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources: {}
      restartPolicy: Always
      automountServiceAccountToken: false
