apps/debug/whoami/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: debug
  annotations:
    cf.containeroo.ch/ignore: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.local.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-auth
  namespace: debug
  annotations:
    cf.containeroo.ch/type: CNAME
    cf.containeroo.ch/content: ${BASE_DOMAIN}
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.${BASE_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  name: http
